--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1308,7 +1308,9 @@ console.log(variables().hachi_comment);
     &lt;&lt;/replace&gt;&gt;
    &lt;&lt;/if&gt;&gt;
  &lt;&lt;/liveblock&gt;&gt;</tw-passagedata><tw-passagedata pid="15" name="hachi_fountain" tags="" position="1450,900" size="100,200">&lt;&lt;liveblock&gt;&gt;
-  &lt;if $hachi_tag == 24&gt;&gt;
+  &lt;if $hachi_tag == &quot;24&quot;&gt;&gt;
+    	&lt;&lt;set $hachi_passage to &quot;hachi fountain&quot;&gt;&gt;
+
       &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
           &lt;&lt;include&quot;hachi_fountain_1&quot;&gt;&gt;
     &lt;&lt;/replace&gt;&gt;
