--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1302,26 +1302,26 @@ console.log(variables().hachi_comment);
 	&lt;&lt;/if&gt;&gt;
 &lt;&lt;/repeat&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="14" name="hachi_tram" tags="" position="1200,900" size="100,200">&lt;&lt;liveblock&gt;&gt;
-  &lt;if $hachi_tag == 23&gt;&gt;
+  &lt;&lt;if $hachi_tag == 23&gt;&gt;
       &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
           &lt;&lt;include&quot;hachi_tram_1&quot;&gt;&gt;
     &lt;&lt;/replace&gt;&gt;
    &lt;&lt;/if&gt;&gt;
- &lt;&lt;/liveblock&gt;&gt;</tw-passagedata><tw-passagedata pid="15" name="hachi_fountain" tags="" position="1450,900" size="100,200">&lt;&lt;set $hachi_passage to &quot;hachi fountain waiting&quot;&gt;&gt;
+ &lt;&lt;/liveblock&gt;&gt;</tw-passagedata><tw-passagedata pid="15" name="hachi_fountain" tags="" position="1450,900" size="100,200">&lt;&lt;set $hachi_passage to &quot;Fountain&quot;&gt;&gt;
 &lt;&lt;liveblock&gt;&gt;
-  &lt;if $hachi_tag == 24&gt;&gt;
+ &lt;&lt;if $hachi_tag == 24&gt;&gt;
       &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
           &lt;&lt;include&quot;hachi_fountain_1&quot;&gt;&gt;
     &lt;&lt;/replace&gt;&gt;
    &lt;&lt;/if&gt;&gt;
  &lt;&lt;/liveblock&gt;&gt;</tw-passagedata><tw-passagedata pid="16" name="hachi_bank" tags="" position="1450,1225" size="100,200">&lt;&lt;liveblock&gt;&gt;
-  &lt;if $hachi_tag == 26&gt;&gt;
+  &lt;&lt;if $hachi_tag == 26&gt;&gt;
       &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
           &lt;&lt;include&quot;hachi_bank_1&quot;&gt;&gt;
     &lt;&lt;/replace&gt;&gt;
    &lt;&lt;/if&gt;&gt;
  &lt;&lt;/liveblock&gt;&gt;</tw-passagedata><tw-passagedata pid="17" name="hachi_stairs" tags="" position="1200,1200" size="100,200">&lt;&lt;liveblock&gt;&gt;
-  &lt;if $hachi_tag == 25&gt;&gt;
+  &lt;&lt;if $hachi_tag == 25&gt;&gt;
       &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
           &lt;&lt;include&quot;hachi_stairs_1&quot;&gt;&gt;
     &lt;&lt;/replace&gt;&gt;
