--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2745,10 +2745,10 @@ makeComments(&#39;avatar&#39;,&#39;observes&#39;);
 
 &lt;div id=&quot;bottomContainer&quot;&gt;
         &lt;div id=&quot;avatar_story&quot;&gt;
-              &lt;&lt;include &quot;empty&quot;&gt;&gt;
+              &lt;&lt;include &quot;both_preamble&quot;&gt;&gt;
         &lt;/div&gt;
         &lt;div id=&quot;hachi_story&quot;&gt;
-               &lt;&lt;include &quot;hachi_act2_transition&quot;&gt;&gt;	
+               &lt;&lt;include &quot;both_preamble&quot;&gt;&gt;	
         &lt;/div&gt;
 &lt;/div&gt;
    
