--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -936,7 +936,8 @@ window.makeShortComments = async function(character, key) {
   &lt;&lt;/script&gt;&gt;
 &lt;&lt;set $avatar_passage to &quot;&quot;&gt;&gt;
 &lt;&lt;set $hachi_passage to &quot;&quot;&gt;&gt;
-
+&lt;&lt;set $avatar_narrating to &quot;&quot;&gt;&gt;
+&lt;&lt;set $hachi_narrating to &quot;&quot;&gt;&gt;
   Ok!
   
   &lt;&lt;goto &quot;loading&quot;&gt;&gt;
