--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -943,7 +943,7 @@ window.makeShortComments = async function(character, key) {
 &lt;&lt;set hachi_narrating to $hachi_narrating&gt;&gt;
 &lt;&lt;script&gt;&gt;
     writeToAvatar(&#39;avatar_narrating&#39;,avatar_narrating);
-    writeToAvatar(&#39;hachi_narrating&#39;,hachi_narrating);
+    writeToHachi(&#39;hachi_narrating&#39;,hachi_narrating);
 &lt;&lt;/script&gt;&gt;
 
   Ok!
@@ -951,7 +951,8 @@ window.makeShortComments = async function(character, key) {
   &lt;&lt;goto &quot;loading&quot;&gt;&gt;
 &lt;&lt;/timed&gt;&gt;&lt;&lt;if _timerRunning&gt;&gt;
 Loading variables...
-&lt;&lt;/if&gt;&gt;&lt;&lt;/nobr&gt;&gt;
+&lt;&lt;/if&gt;&gt;
+&lt;&lt;/nobr&gt;&gt;
 </tw-passagedata><tw-passagedata pid="2" name="live_variables" tags="" position="1275,450" size="200,200">
 &lt;&lt;nobr&gt;&gt;
 &lt;&lt;set $avatar_checkpoint to avatar_checkpoint&gt;&gt;
