--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -944,6 +944,7 @@ window.makeShortComments = async function(character, key) {
 &lt;&lt;script&gt;&gt;
     writeToAvatar(&#39;avatar_narrating&#39;,avatar_narrating);
     writeToHachi(&#39;hachi_narrating&#39;,hachi_narrating);
+    console.log(&quot;Initializing narration&quot;);
 &lt;&lt;/script&gt;&gt;
 
   Ok!
@@ -2755,10 +2756,10 @@ makeComments(&#39;avatar&#39;,&#39;observes&#39;);
 &lt;/div&gt;
 
 &lt;div id=&quot;bottomContainer&quot;&gt;
-        &lt;div id=&quot;avatar_story&quot;&gt;
+        &lt;div id=&quot;#avatar_story&quot;&gt;
               &lt;&lt;include &quot;both_preamble&quot;&gt;&gt;
         &lt;/div&gt;
-        &lt;div id=&quot;hachi_story&quot;&gt;
+        &lt;div id=&quot;#hachi_story&quot;&gt;
                &lt;&lt;include &quot;both_preamble&quot;&gt;&gt;	
         &lt;/div&gt;
 &lt;/div&gt;
