--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2223,10 +2223,10 @@ Today, will be a different day./park3&quot;&gt;&gt;
   &lt;&lt;/replace&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;div id=&quot;avatarStory&quot;&gt;
+&lt;div id=&quot;#avatarStory&quot;&gt;
 $avatar_passage 
 &lt;/div&gt;
-&lt;div id=&quot;hachiStory&quot;&gt;
+&lt;div id=&quot;#hachiStory&quot;&gt;
  $hachi_passage
  &lt;/div&gt;
  
