--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2217,11 +2217,14 @@ Today, will be a different day./park3&quot;&gt;&gt;
   &lt;&lt;/replace&gt;&gt;
   &lt;&lt;/if&gt;&gt;
 
+
   &lt;&lt;if $hachi_narrating == &quot;both_01false&quot;&gt;&gt;
    &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
   		&lt;&lt;include&quot;hachi_preamble&quot;&gt;&gt;
   &lt;&lt;/replace&gt;&gt;
 &lt;&lt;/if&gt;&gt;
+
+&lt;div id=&quot;bottomContainer&quot;&gt;
 
 &lt;div id=&quot;avatarStory&quot;&gt;
 $avatar_passage 
@@ -2229,6 +2232,7 @@ $avatar_passage
 &lt;div id=&quot;hachiStory&quot;&gt;
  $hachi_passage
  &lt;/div&gt;
+&lt;/div&gt;
  
  &lt;&lt;/liveblock&gt;&gt;
  
@@ -2755,12 +2759,14 @@ makeComments(&#39;avatar&#39;,&#39;observes&#39;);
   &lt;/div&gt;
 &lt;/div&gt;
 
+&lt;div id=&quot;bottomContainer&quot;&gt;
         &lt;div id=&quot;avatar_story&quot;&gt;
               &lt;&lt;include &quot;both_preamble&quot;&gt;&gt;
         &lt;/div&gt;
         &lt;div id=&quot;hachi_story&quot;&gt;
                &lt;&lt;include &quot;both_preamble&quot;&gt;&gt;	
         &lt;/div&gt;
+&lt;/div&gt;
    
 /*
 &lt;&lt;set $storyWeather to &#39;&#39;&gt;&gt;
