--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2225,13 +2225,12 @@ Today, will be a different day./park3&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;div id=&quot;bottomContainer&quot;&gt;
-
-&lt;div id=&quot;avatarStory&quot;&gt;
-$avatar_passage 
-&lt;/div&gt;
-&lt;div id=&quot;hachiStory&quot;&gt;
- $hachi_passage
- &lt;/div&gt;
+  &lt;div id=&quot;#avatarStory&quot;&gt;
+  	$avatar_passage 
+  &lt;/div&gt;
+  &lt;div id=&quot;#hachiStory&quot;&gt;
+   	$hachi_passage
+   &lt;/div&gt;
 &lt;/div&gt;
  
  &lt;&lt;/liveblock&gt;&gt;
