--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2225,10 +2225,10 @@ Today, will be a different day./park3&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;div id=&quot;bottomContainer&quot;&gt;
-  &lt;div id=&quot;#avatarStory&quot;&gt;
+  &lt;div id=&quot;avatarStory&quot;&gt;
   	$avatar_passage 
   &lt;/div&gt;
-  &lt;div id=&quot;#hachiStory&quot;&gt;
+  &lt;div id=&quot;hachiStory&quot;&gt;
    	$hachi_passage
    &lt;/div&gt;
 &lt;/div&gt;
@@ -2759,10 +2759,10 @@ makeComments(&#39;avatar&#39;,&#39;observes&#39;);
 &lt;/div&gt;
 
 &lt;div id=&quot;bottomContainer&quot;&gt;
-        &lt;div id=&quot;avatar_story&quot;&gt;
+        &lt;div id=&quot;#avatar_story&quot;&gt;
               &lt;&lt;include &quot;both_preamble&quot;&gt;&gt;
         &lt;/div&gt;
-        &lt;div id=&quot;hachi_story&quot;&gt;
+        &lt;div id=&quot;#hachi_story&quot;&gt;
                &lt;&lt;include &quot;both_preamble&quot;&gt;&gt;	
         &lt;/div&gt;
 &lt;/div&gt;
