--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2225,10 +2225,12 @@ Today, will be a different day./park3&quot;&gt;&gt;
 
 
   &lt;div id=&quot;#avatarStory&quot;&gt;
-  	$avatar_passage 
+  	$avatar_passage
+    Both preamble avatar
   &lt;/div&gt;
   &lt;div id=&quot;#hachiStory&quot;&gt;
    	$hachi_passage
+    Both preamble hachi
    &lt;/div&gt;
 
  
@@ -2760,9 +2762,11 @@ makeComments(&#39;avatar&#39;,&#39;observes&#39;);
 &lt;div id=&quot;bottomContainer&quot;&gt;
         &lt;div id=&quot;avatar_story&quot;&gt;
               &lt;&lt;include &quot;both_preamble&quot;&gt;&gt;
+              main both avatar
         &lt;/div&gt;
         &lt;div id=&quot;hachi_story&quot;&gt;
                &lt;&lt;include &quot;both_preamble&quot;&gt;&gt;	
+               main both hachi
         &lt;/div&gt;
 &lt;/div&gt;
    
