--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2224,11 +2224,11 @@ Today, will be a different day./park3&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 
-  &lt;div id=&quot;#avatarStory&quot;&gt;
+  &lt;div id=&quot;avatarStory&quot;&gt;
   	$avatar_passage
     Both preamble avatar
   &lt;/div&gt;
-  &lt;div id=&quot;#hachiStory&quot;&gt;
+  &lt;div id=&quot;hachiStory&quot;&gt;
    	$hachi_passage
     Both preamble hachi
    &lt;/div&gt;
