--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2223,7 +2223,15 @@ Today, will be a different day./park3&quot;&gt;&gt;
   &lt;&lt;/replace&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-  	
+&lt;div id=&quot;bottomContainer&quot;&gt;
+        &lt;div id=&quot;avatar_story&quot;&gt;
+			$avatar_passage  
+        &lt;/div&gt;
+        &lt;div id=&quot;hachi_story&quot;&gt;
+   			$hachi_passage
+        &lt;/div&gt;
+&lt;/div&gt;
+
 
  &lt;&lt;/liveblock&gt;&gt;
  
@@ -2750,6 +2758,9 @@ makeComments(&#39;avatar&#39;,&#39;observes&#39;);
   &lt;/div&gt;
 &lt;/div&gt;
 
+&lt;&lt;include &quot;both_preamble&quot;&gt;&gt;	
+
+/*
 &lt;div id=&quot;bottomContainer&quot;&gt;
         &lt;div id=&quot;avatar_story&quot;&gt;
               &lt;&lt;include &quot;both_preamble&quot;&gt;&gt;
@@ -2760,6 +2771,7 @@ makeComments(&#39;avatar&#39;,&#39;observes&#39;);
                main both hachi
         &lt;/div&gt;
 &lt;/div&gt;
+*/
    
 /*
 &lt;&lt;set $storyWeather to &#39;&#39;&gt;&gt;
