--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2224,10 +2224,10 @@ Today, will be a different day./park3&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;div id=&quot;bottomContainer&quot;&gt;
-        &lt;div id=&quot;avatar_story&quot;&gt;
+        &lt;div id=&quot;#avatar_story&quot;&gt;
 			$avatar_passage  
         &lt;/div&gt;
-        &lt;div id=&quot;hachi_story&quot;&gt;
+        &lt;div id=&quot;#hachi_story&quot;&gt;
    			$hachi_passage
         &lt;/div&gt;
 &lt;/div&gt;
