--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2212,7 +2212,7 @@ Today, will be a different day./park3&quot;&gt;&gt;
   &lt;&lt;/if&gt;&gt;
   
 &lt;&lt;if $avatar_narrating == &quot;both_01false&quot;&gt;&gt;
-  &lt;&lt;replace &quot;#avatar_story&quot;&gt;&gt;
+  &lt;&lt;replace &quot;avatar_story&quot;&gt;&gt;
   		&lt;&lt;include&quot;avatar_preamble&quot;&gt;&gt;
   &lt;&lt;/replace&gt;&gt;
   &lt;&lt;/if&gt;&gt;
