--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2212,7 +2212,7 @@ Today, will be a different day./park3&quot;&gt;&gt;
   &lt;&lt;/if&gt;&gt;
   
 &lt;&lt;if $avatar_narrating == &quot;both_01false&quot;&gt;&gt;
-  &lt;&lt;replace &quot;avatar_story&quot;&gt;&gt;
+  &lt;&lt;replace &quot;#avatar_story&quot;&gt;&gt;
   		&lt;&lt;include&quot;avatar_preamble&quot;&gt;&gt;
   &lt;&lt;/replace&gt;&gt;
   &lt;&lt;/if&gt;&gt;
@@ -2224,10 +2224,10 @@ Today, will be a different day./park3&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;div id=&quot;bottomContainer&quot;&gt;
-        &lt;div id=&quot;avatar_story&quot;&gt;
+        &lt;div id=&quot;#avatar_story&quot;&gt;
 			$avatar_passage  
         &lt;/div&gt;
-        &lt;div id=&quot;hachi_story&quot;&gt;
+        &lt;div id=&quot;#hachi_story&quot;&gt;
    			$hachi_passage
         &lt;/div&gt;
 &lt;/div&gt;
