--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2737,7 +2737,7 @@ makeComments(&#39;avatar&#39;,&#39;observes&#39;);
       &lt;&lt;set _buttonCaption to &quot;RELOAD&quot;&gt;&gt;
   &lt;&lt;/if&gt;&gt;
   &lt;&lt;if $storyReady == true&gt;&gt;
-  	  &lt;&lt;set _buttonCaption to &quot;RELOAD&quot;&gt;&gt;
+  	  &lt;&lt;set _buttonCaption to &quot;RESET&quot;&gt;&gt;
   &lt;&lt;/if&gt;&gt;
 &lt;&lt;/liveblock&gt;&gt;
 
