--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2814,6 +2814,8 @@ Promise.all([
 
   console.log(&quot;Avatar walking speed is: &quot; + variables().avatar_speed);
   console.log(&quot;Hachi walking speed is: &quot; + variables().hachi_speed);
+  console.log(&quot;Avatar closest amenity is: &quot; + variables().avatar_street);
+  console.log(&quot;Hachi closest street is: &quot; + variables().hachi_street);
   console.log(&quot;Avatar closest amenity is: &quot; + variables().avatar_amenity);
   console.log(&quot;Hachi closest amenity is: &quot; + variables().hachi_amenity);
   console.log(&quot;Avatar transit closest stop is: &quot; +  variables().avatar_t_stop);
