--- a/index.html
+++ b/index.html
@@ -931,7 +931,7 @@
 								speaking = false;
 								sound.unload(); // Unload the audio object to free up resources
 								if (playAction){
-									window.m_aha_Sound.play();
+									window.notification_Sound.play();
 									playAction=false;
 								}
 							},
