--- a/index.html
+++ b/index.html
@@ -930,10 +930,10 @@
 								console.log("End speaking");
 								speaking = false;
 								sound.unload(); // Unload the audio object to free up resources
-								if (playAction){
-									window.notification_Sound.play();
-									playAction=false;
-								}
+								setTimeout(function() {
+									window.notification_Sound.play(); // Play the notification sound after a delay
+									playAction = false; // Reset playAction to false
+								}, 2000); // Delay of 2000 milliseconds (2 seconds)
 							},
 							onloaderror: (id, err) => {
 								console.error("Audio playback error:", err);
