--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1376,7 +1376,7 @@ $hachi_passage
 </tw-passagedata><tw-passagedata pid="19" name="avatar_act2" tags="" position="2500,1050" size="100,100">&lt;&lt;nobr&gt;&gt;
 &lt;&lt;set $avatar_turn to 0&gt;&gt;
 
-&lt;&lt;set $avatar_passage to &quot;avatar_act2/Buro decides to go to different spots Hachi often visits, to see if he can find him. He will meet two different characters in two different places around &quot; + $storyNeighborhood + &quot;: a bakery, and a church.//&quot;&gt;&gt;
+&lt;&lt;set $avatar_passage to &quot;avatar_act2/Buro decides to go to different spots Hachi often visits, to see if he can find him. He will meet two different characters in two different places around &quot; + $storyNeighborhood + &quot;: the bakery, and the church.//&quot;&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
 $avatar_passage
@@ -1387,7 +1387,7 @@ $avatar_passage
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $avatar_nextAct is true and avatar_narrating == &quot;avatar_act2_01false&quot;&gt;&gt;
- &lt;&lt;set $avatar_passage to &quot;avatar_act2_02/And so, Buro starts walking again.&quot;&gt;&gt;
+ &lt;&lt;set $avatar_passage to &quot;avatar_act2_02/And so, Buro starts walking again.//&quot;&gt;&gt;
     &lt;&lt;replace &quot;#avatar_story&quot;&gt;&gt;
   		&lt;&lt;include&quot;avatar_act2_transition&quot;&gt;&gt;
         &lt;&lt;set $hachi_nextAct to false&gt;&gt;
@@ -1674,7 +1674,7 @@ $avatar_passage
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="30" name="avatar_bakery_2" tags="" position="2875,875" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set $avatar_passage to &quot;avatar_bakery2_00/Buro notices Lopez, the resident cat, prowling around the bakery. Lopez seems to take a liking to Buro, rubbing against his legs as he engages in conversation with Mrs. Lopez./meow&quot;&gt;&gt;
+&lt;&lt;set $avatar_passage to &quot;avatar_bakery2_00/Buro notices Lopez, the resident cat, prowling around the bakery. Lopez seems to take a liking to Buro, rubbing against his legs as he engages in conversation with Mrs. Lopez./meow/&quot;&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
 $avatar_passage
@@ -1697,7 +1697,7 @@ $avatar_passage
 &lt;&lt;set $avatar_passage to &quot;avatar_bakery4_00/As Buro converses with Mrs. Lopez, or Sofia as her friends call her, she shares stories about Hachi&#39;s fondness for old bread crusts, often found near the bakery&#39;s dumpster in the mornings./f_talk3/&quot;&gt;&gt;
 
 &lt;&lt;if $avatar_turn == 3&gt;&gt;
-  &lt;&lt;set $avatar_bank to &quot;Or you can also visit the bank. It recently opened&quot;&gt;&gt;
+  &lt;&lt;set $avatar_bank to &quot;Or you can also visit the bank. It recently opened.&quot;&gt;&gt;
   &lt;&lt;else&gt;&gt;
   &lt;&lt;set $avatar_bank to&quot;&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
@@ -1706,7 +1706,7 @@ $avatar_passage
 $avatar_passage
 
 &lt;&lt;if $avatar_narrating == &quot;avatar_bakery4_00false&quot; and $avatar_part_mov !== &quot;none&quot;&gt;&gt;
-  &lt;&lt;set $avatar_passage to &quot;avatar_bakery4_01/&#39;You know, I&#39;ve seen a dog similar to your description hanging around the churchyard down the street and the tobacco shop too. Might be worth a look if you&#39;re searching for your furry friend&#39;.&quot;+$avatar_bank&gt;&gt;
+  &lt;&lt;set $avatar_passage to &quot;avatar_bakery4_01/&#39;You know, I&#39;ve seen Hachi hanging around the churchyard down the street and the tobacco shop too. Might be worth a look if you&#39;re searching for your furry friend&#39;.&quot;+$avatar_bank&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $avatar_narrating == &quot;avatar_bakery4_01false&quot; and $avatar_movement !==&quot;none&quot;&gt;&gt;
@@ -1715,7 +1715,7 @@ $avatar_passage
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $avatar_nextAct is true and avatar_narrating == &quot;avatar_bakery4_02false&quot; &gt;&gt;
-&lt;&lt;set $avatar_passage to &quot;And so Buro started walking to the next stop&quot;&gt;&gt;
+&lt;&lt;set $avatar_passage to &quot;And so Buro started walking to the next stop.//&quot;&gt;&gt;
 	    &lt;&lt;replace &quot;#avatar_story&quot;&gt;&gt;
   		&lt;&lt;include&quot;avatar_act2_transition&quot;&gt;&gt;
   &lt;&lt;/replace&gt;&gt;
@@ -1724,7 +1724,7 @@ $avatar_passage
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="32" name="avatar_church_1" tags="" position="2100,875" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set $avatar_passage to &quot;avatar_church1_00/Buro visits the church, where he meets Father Kent. Father Kent, a globe trotter evangelist hailing from the rust belt in Akron, tells Buro about Hachi&#39;s nightly visits to the church, where he finds shelter and companionship. He describes Hachi as a gentle soul, always seeking to give comfort./church2&quot;&gt;&gt;
+&lt;&lt;set $avatar_passage to &quot;avatar_church1_00/Buro visits the church, where he meets Father Kent. Father Kent, a globe trotter evangelist hailing from the rust belt in Akron, tells Buro about Hachi&#39;s nightly visits to the church, where he finds shelter and companionship. He describes Hachi as a gentle soul, always seeking to give comfort./church2/&quot;&gt;&gt;
 &lt;&lt;liveblock&gt;&gt;
 $avatar_passage
 
@@ -1749,7 +1749,7 @@ As he approach, Buro said to himself, &#39;Let&#39;s see if there&#39;s any sign
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="33" name="avatar_church_2" tags="" position="2100,1000" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set $avatar_passage to &quot;avatar_church2_00/Buro sees Father Kent approaching, the wise and worldly priest of the church, and engages in conversation about Hachi&#39;s visits. Buro said to him, &#39;Father Kent, I&#39;ve been searching for my dog, Hachi. Have you seen him around the church lately?&#39;/m_talk1&quot;&gt;&gt;
+&lt;&lt;set $avatar_passage to &quot;avatar_church2_00/Buro sees Father Kent approaching, the wise and worldly priest of the church, and engages in conversation about Hachi&#39;s visits. Buro said to him, &#39;Father Kent, I&#39;ve been searching for my dog, Hachi. Have you seen him around the church lately?&#39;/m_talk1/&quot;&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
 $avatar_passage
@@ -1774,7 +1774,7 @@ $avatar_passage
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="34" name="avatar_church_3" tags="" position="2225,875" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set $avatar_passage to &quot;avatar_church3_00/Father Kent drifts from the conversation to offer a glimpse into his past, recounting tales of his travels and experiences as a preacher before finding his calling in the rust belt./m_talk2&quot;&gt;&gt;
+&lt;&lt;set $avatar_passage to &quot;avatar_church3_00/Father Kent drifts from the conversation to offer a glimpse into his past, recounting tales of his travels and experiences as a preacher before finding his calling in the rust belt./m_talk2/&quot;&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
 $avatar_passage
@@ -1817,7 +1817,7 @@ $avatar_passage
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $avatar_nextAct is true and avatar_narrating == &quot;avatar_church4_01false&quot; &gt;&gt;
-	&lt;&lt;set $avatar_passage to &quot;Finally, Buro began walking again&quot;&gt;&gt;
+	&lt;&lt;set $avatar_passage to &quot;avatar_church4_02/Finally, Buro began walking again//&quot;&gt;&gt;
 	    &lt;&lt;replace &quot;#avatar_story&quot;&gt;&gt;
   		&lt;&lt;include&quot;avatar_act2_transition&quot;&gt;&gt;
   &lt;&lt;/replace&gt;&gt;
@@ -1827,9 +1827,9 @@ $avatar_passage
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="36" name="both_preamble" tags="" position="1850,375" size="200,100">&lt;&lt;nobr&gt;&gt;
 
-&lt;&lt;set $avatar_passage to &quot;both_00/A tale of friendship and loyalty unfolds in the heart of &quot; + $storyCity +&quot;, a small city decorated with cobblestone streets and old buildings. Hachi, the loyal Akita dog, and Buro, a shy university student, share a bond through many years of friendship./street&quot;&gt;&gt;
+&lt;&lt;set $avatar_passage to &quot;both_00/A tale of friendship and loyalty unfolds in the heart of &quot; + $storyCity +&quot;, a city with cobblestone streets and old buildings. Hachi, the loyal Akita dog, and Buro, a shy university student, share a bond through many years of friendship./street&quot;&gt;&gt;
 
-&lt;&lt;set $hachi_passage to &quot;both_00/A tale of friendship and loyalty unfolds in the heart of &quot; + $storyCity +&quot; ,small city decorated with cobblestone streets and old buildings. Hachi, the loyal Akita dog, and Buro, a shy university student, share a bond through many years of friendship./street&quot;&gt;&gt;
+&lt;&lt;set $hachi_passage to &quot;both_00/A tale of friendship and loyalty unfolds in the heart of &quot; + $storyCity +&quot; ,a city with cobblestone streets and old buildings. Hachi, the loyal Akita dog, and Buro, a shy university student, share a bond through many years of friendship./street&quot;&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
 &lt;&lt;if $avatar_narrating == &quot;both_00false&quot;&gt;&gt;
@@ -1899,17 +1899,17 @@ $hachi_passage
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="38" name="avatar_preamble" tags="" position="1975,500" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set $avatar_passage to &quot;avatar_pre_00/While playing in the park, Hachi&#39;s nose twitches, catching a scent that pulls him away from Buro. He sniffs the air, curiosity piqued by the provocative smell. Buro&#39;s voice echoes in his mind, but the scent drags him deeper./park&quot;&gt;&gt;
+&lt;&lt;set $avatar_passage to &quot;avatar_pre_00/While playing in the park, Hachi&#39;s nose twitches, catching a scent that pulls him away from Buro. He sniffs the air, curiosity piqued by the provocative smell. Buro&#39;s voice echoes in his mind, but the scent drags him deeper./park3&quot;&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
 $avatar_passage
 
 &lt;&lt;if $avatar_narrating == &quot;avatar_pre_00false&quot; &gt;&gt;
-  &lt;&lt;set $avatar_passage to &quot;avatar_pre_01/Buro&#39;s heart races as he notices that Hachi is no longer there and starts searching around &quot; + $storyNeighborhood +&quot; for any sign of his friend./crowd&quot;&gt;&gt;
+  &lt;&lt;set $avatar_passage to &quot;avatar_pre_01/Buro&#39;s heart races as he notices that Hachi is no longer there and starts searching around &quot; + $storyNeighborhood +&quot; for any sign of his friend./crowd1&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $avatar_narrating == &quot;avatar_pre_01false&quot; and $avatar_speed &gt;=&quot;0.2&quot;&gt;&gt;
-  &lt;&lt;set $avatar_passage to &quot;avatar_pre_03/Buro sees Hachi in the distance. What should Buro do? Should he look up and call Hachi&#39;s name? or should he Stand on one leg to get a better view?&quot;&gt;&gt;
+  &lt;&lt;set $avatar_passage to &quot;avatar_pre_03/Buro sees Hachi in the distance. What should Buro do? Should he look up and call Hachi&#39;s name? or should he Stand on one leg to get a better view?//&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if ($avatar_narrating == &quot;avatar_pre_03false&quot; or $avatar_narrating == &quot;avatar_04Bfalse&quot;) and $avatar_part_mov == &quot;head&quot; and $avatar_part_dir == &quot;up&quot;&gt;&gt;
@@ -2033,7 +2033,7 @@ $hachi_passage
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;
 </tw-passagedata><tw-passagedata pid="42" name="avatar_act1_1" tags="" position="2100,725" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set $avatar_passage to &quot;avatar_act1_02/Buro strains to get a better view of the surrounding area, hoping to catch sight of Hachi&#39;s distinctive caramel and white fur. However, his view is suddenly obstructed by a &quot; + $avatar_t_type + &quot; dropping off passengers.&quot;&gt;&gt;
+&lt;&lt;set $avatar_passage to &quot;avatar_act1_02/Buro ties to get a better view, hoping to catch sight of Hachi&#39;s distinctive caramel and white fur. However, his view is suddenly obstructed by a &quot; + $avatar_t_type + &quot; dropping off passengers.&quot;&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
 $avatar_passage
@@ -2299,13 +2299,13 @@ makeComments(&#39;avatar&#39;,&#39;observes&#39;);
     	&lt;&lt;script&gt;&gt;stopComments(`avatar`)&lt;&lt;/script&gt;&gt;
         &lt;&lt;replace &quot;#avatar_story&quot;&gt;&gt;
         	&lt;&lt;set $previousAvatar_checkpoint to $avatar_checkpoint&gt;&gt;
-            &lt;&lt;include &quot;avatar_bakery_1&quot;&gt;&gt;
+            &lt;&lt;include &quot;avatar_bakery&quot;&gt;&gt;
         &lt;&lt;/replace&gt;&gt;
     &lt;&lt;elseif $avatar_checkpoint is &quot;avatar_church&quot;  and $previousAvatar_checkpoint !== avatar_checkpoint&gt;&gt;
     	&lt;&lt;script&gt;&gt;stopComments(`avatar`)&lt;&lt;/script&gt;&gt;
         &lt;&lt;replace &quot;#avatar_story&quot;&gt;&gt;
        	 	&lt;&lt;set $previousAvatar_checkpoint to $avatar_checkpoint&gt;&gt;
-            &lt;&lt;include &quot;avatar_church_1&quot;&gt;&gt;
+            &lt;&lt;include &quot;avatar_church&quot;&gt;&gt;
         &lt;&lt;/replace&gt;&gt;
     &lt;&lt;/if&gt;&gt;
 &lt;&lt;/liveblock&gt;&gt;
