--- a/pwd.html
+++ b/pwd.html
@@ -6,14 +6,24 @@
 		<title>Password Protected Page</title>
 		<style>
 			body {
+			    font-family: "Roboto", sans-serif;
+			    margin: 0;
+			    padding: 0;
+			    display: flex;
+			    flex-direction: column;
+			    align-items: center;
+			    justify-content: center;
+			    height: 100vh;
+			    background-color: #48494b;
+			}
+			.logo {
 			    display: flex;
 			    justify-content: center;
-			    align-items: center;
-			    height: 100vh;
-			    font-family: Arial, sans-serif;
+			    margin-bottom: 20px;
 			}
 			.container {
 			    text-align: center;
+			    color: #ffffff; /* Change text color to white for better visibility on dark background */
 			}
 			.input-container {
 			    display: flex;
@@ -47,6 +57,9 @@
 		</style>
 	</head>
 	<body>
+		<div class="logo">
+			<img src="logo.svg" alt="Logo" />
+		</div>
 		<div class="container">
 			<h1>Enter Password</h1>
 			<div class="input-container">
@@ -103,6 +116,12 @@
 			        updateInputFields();
 			    }
 			}
+
+			// Clear the current input when the page is loaded
+			window.onload = function() {
+			    currentInput = "";
+			    updateInputFields();
+			};
 		</script>
 	</body>
 </html>
