--- a/pwd.html
+++ b/pwd.html
@@ -29,43 +29,50 @@
 			.input-container {
 			    display: flex;
 			    justify-content: center;
-			    margin-bottom: 10px;
+			    margin-bottom: 20px;
 			}
 			.input-container input {
-			    width: 40px;
-			    height: 40px;
+			    width: 50px;
+			    height: 50px;
 			    text-align: center;
 			    font-size: 1.5em;
-			    margin: 0 5px;
+			    margin: 0 10px;
 			    border: 1px solid #ccc;
 			    border-radius: 5px;
+			    background-color: #ffffff; /* White background for input fields */
+			    color: #000000; /* Black text for input fields */
 			}
 			.keypad {
 			    display: grid;
 			    grid-template-columns: repeat(3, 1fr);
-			    gap: 10px;
-			    max-width: 150px;
+			    gap: 20px;
+			    max-width: 300px;
 			    margin: 0 auto;
 			}
 			.keypad button {
-			    width: 50px;
-			    height: 50px;
-			    font-size: 1.5em;
+			    width: 80px;
+			    height: 80px;
+			    font-size: 2em;
 			    border: 1px solid #ccc;
-			    border-radius: 5px;
+			    border-radius: 10px;
 			    cursor: pointer;
+			    background-color: #ffffff; /* White background for buttons */
+			    color: #000000; /* Black text for buttons */
+			    display: flex;
+			    align-items: center;
+			    justify-content: center;
 			}
 			@media (max-width: 600px) {
 			    .input-container input {
-			        width: 30px;
-			        height: 30px;
-			        font-size: 1.2em;
-			        margin: 0 3px;
-			    }
-			    .keypad button {
 			        width: 40px;
 			        height: 40px;
 			        font-size: 1.2em;
+			        margin: 0 5px;
+			    }
+			    .keypad button {
+			        width: 60px;
+			        height: 60px;
+			        font-size: 1.5em;
 			    }
 			}
 		</style>
