--- a/pwd.html
+++ b/pwd.html
@@ -13,7 +13,7 @@
 			    flex-direction: column;
 			    align-items: center;
 			    justify-content: center;
-			    height: 100vh;
+			    min-height: 100vh; /* Minimum height of viewport */
 			    background-color: #48494b;
 			    color: #ffffff;
 			}
@@ -21,10 +21,13 @@
 			    display: flex;
 			    justify-content: center;
 			    margin-bottom: 20px;
+			    max-width: 80%; /* Limit logo size to 80% of viewport width */
 			}
 			.container {
 			    text-align: center;
-			    color: #ffffff; /* Change text color to white for better visibility on dark background */
+			    max-width: 80%; /* Limit container width to 80% of viewport width */
+			    padding: 20px;
+			    box-sizing: border-box;
 			}
 			.input-container {
 			    display: flex;
@@ -39,8 +42,8 @@
 			    margin: 0 10px;
 			    border: 1px solid #ccc;
 			    border-radius: 5px;
-			    background-color: #ffffff; /* White background for input fields */
-			    color: #000000; /* Black text for input fields */
+			    background-color: #ffffff;
+			    color: #000000;
 			}
 			.keypad {
 			    display: grid;
@@ -56,8 +59,8 @@
 			    border: 1px solid #ccc;
 			    border-radius: 10px;
 			    cursor: pointer;
-			    background-color: #ffffff; /* White background for buttons */
-			    color: #000000; /* Black text for buttons */
+			    background-color: #ffffff;
+			    color: #000000;
 			    display: flex;
 			    align-items: center;
 			    justify-content: center;
@@ -138,9 +141,16 @@
 			}
 
 			// Clear the current input when the page is loaded
-			window.onload = function() {
+			window.addEventListener('DOMContentLoaded', function() {
 			    clearAllDigits();
-			};
+			});
+
+			// Clear the current input when the page is shown from back/forward cache
+			window.addEventListener('pageshow', function(event) {
+			    if (event.persisted) {
+			        clearAllDigits();
+			    }
+			});
 		</script>
 	</body>
 </html>
