--- a/pwd.html
+++ b/pwd.html
@@ -11,7 +11,7 @@
 			<img src="logo.svg" alt="Logo" />
 		</div>
 		<div class="container">
-			<h1>Enter Password</h1>
+			<h1>Demo Code</h1>
 			<div class="input-container">
 				<input type="password" id="digit1" maxlength="1" disabled />
 				<input type="password" id="digit2" maxlength="1" disabled />
