--- a/pwd.html
+++ b/pwd.html
@@ -28,9 +28,9 @@
 				<button onclick="appendDigit(7)">7</button>
 				<button onclick="appendDigit(8)">8</button>
 				<button onclick="appendDigit(9)">9</button>
-				<button onclick="clearAllDigits()">C</button>
+				<button class="clear-button" onclick="clearAllDigits()">C</button>
 				<button onclick="appendDigit(0)">0</button>
-				<button onclick="checkPassword()">OK</button>
+				<button class="ok-button" onclick="checkPassword()">OK</button>
 			</div>
 		</div>
 
