--- a/disdemo.html
+++ b/disdemo.html
@@ -80,7 +80,7 @@
 			            console.error('Failed to load content: ' + xhr.statusText);
 			        }
 			    };
-			    xhr.open('GET', 'protected.html');
+			    xhr.open('GET', 'index.html');
 			    xhr.send();
 			}
 
